tests/compile_fail/fold_ambient_type.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/compile_fail/fold_ambient_type.rs:10:71
   |
 9 |     with_ambient_type(|ambient| {
   |                        ------- `ambient` declared here, outside of the closure body
10 |         drive_type_fold(&[], |brand, _views| store_folded_type(brand, ambient.clone()));
   |                               -----                                   ^^^^^^^^^^^^^^^ `brand` escapes the closure body here
   |                               |
   |                               `brand` is a reference that is only valid in the closure body
   |
   = note: requirement occurs because of the type `KType<'_>`, which makes the generic argument `'_` invariant
   = note: the enum `KType<'a>` is invariant over the parameter `'a`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error: lifetime may not live long enough
  --> tests/compile_fail/fold_ambient_type.rs:10:46
   |
 9 |     with_ambient_type(|ambient| {
   |                        ------- has type `&KType<'1>`
10 |         drive_type_fold(&[], |brand, _views| store_folded_type(brand, ambient.clone()));
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'1` must outlive `'static`
